changing index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,13 +22,13 @@
                     <select id="transformation-selector">
                         <option value="lower">Convert to lowercase</option>
                         <option value="upper">Convert to uppercase</option>
-                        <option value="3">Capitalize</option>
-                        <option value="4">Inverse</option>
-                        <option value="5">Remove duplicates</option>
-                        <option value="6">Expand shortcuts</option>
-                        <option value="7">Make shortcuts</option>
-                        <option value="8">Convert numbers to text</option>
-                        <option value="9">Escape LaTeX special characters</option>
+                        <option value="capitalize">Capitalize</option>
+                        <option value="invert">Inverse</option>
+                        <option value="removeRepetition">Remove duplicates</option>
+                        <option value="expandShortcuts">Expand shortcuts</option>
+                        <option value="makeShortcuts">Make shortcuts</option>
+                        <option value="numbersToText">Convert numbers to text</option>
+                        <option value="latex">Escape LaTeX special characters</option>
                     </select>
                     <button onclick="submitForm()">Submit</button>
                 </div>
