changed "shortcuts" to "abbreviations"

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,8 +25,8 @@
                         <option value="capitalize">Capitalize</option>
                         <option value="invert">Inverse</option>
                         <option value="removeRepetition">Remove duplicates</option>
-                        <option value="expandShortcuts">Expand shortcuts</option>
-                        <option value="makeShortcuts">Make shortcuts</option>
+                        <option value="expandAbbreviations">Expand abbreviations</option>
+                        <option value="makeAbbreviations">Make abbreviations</option>
                         <option value="numbersToText">Convert numbers to text</option>
                         <option value="latex">Escape LaTeX special characters</option>
                     </select>
